--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
-    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-iframe": "^1.8.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
