--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-iframe": "^1.8.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
